tests/codegen/fail/enum/derive_variant_with_field.rs
use juniper::GraphQLEnum;

#[derive(GraphQLEnum)]
enum Test {
    Variant(i32),
}

fn main() {}
