tests/codegen/fail/enum/derive_variant_with_field.stderr
error: GraphQL enum no fields allowed for non-ignored variants
 --> fail/enum/derive_variant_with_field.rs:5:12
  |
5 |     Variant(i32),
  |            ^^^^^
  |
  = note: https://spec.graphql.org/October2021#sec-Enums
